# wasm-worms

./: .gitignore  AGENTS.md  Cargo.toml  HOW_TO_RUN.md  IMPLEMENTATION_PLAN.md  README.md  index.html  run_game.md  test.html
src/: lib.rs  lib_simple.rs  main.rs
src/game/: ai.rs  aiming.rs  camera.rs  game_state.rs  mod.rs  particles.rs  physics.rs  terrain.rs  ui.rs  weapons.rs  worm.rs
